--- a/huellaProto/huellaProto/Views/CalcularInsti.xaml
+++ b/huellaProto/huellaProto/Views/CalcularInsti.xaml
@@ -63,7 +63,7 @@
                             
                 <StackLayout Margin="0,10,0,0">
                    <Button
-                       BackgroundColor="#61edb9"
+                       BackgroundColor="#82a20d"
                        BorderRadius="23"
                        Command="{Binding LoginCommand}"
                        HeightRequest="46"
