--- a/huellaProto/huellaProto/Views/Login.xaml
+++ b/huellaProto/huellaProto/Views/Login.xaml
@@ -11,7 +11,9 @@
         <ScrollView BindingContext="{Binding Login}">
             <StackLayout Padding="0,15,0,0">
                 <StackLayout VerticalOptions="CenterAndExpand">
-                    <Image Source="huella_icon.png">
+                    <Image 
+                        Source="logoVerde.png"
+                        Margin="0,0,0,30">
                         <Image.WidthRequest>
                             <OnIdiom
                                 x:TypeArguments="x:Double"
@@ -19,20 +21,46 @@
                                 Tablet="210.0" />
                         </Image.WidthRequest>
                     </Image>
-                    <StackLayout HorizontalOptions="CenterAndExpand" Orientation="Horizontal">
+                    <StackLayout HorizontalOptions="CenterAndExpand" Orientation="Horizontal" >
                         <Entry
                             Keyboard="Email"
                             Placeholder="E-mail"
                             Text="{Binding Email, Mode=TwoWay}"
-                            WidthRequest="200" />
+                            WidthRequest="200" >
+                            <Entry.WidthRequest>
+                                <OnIdiom
+                                    x:TypeArguments="x:Double"
+                                    Phone="80.0"
+                                    Tablet="300.0" />
+                            </Entry.WidthRequest>
+                                <Entry.HeightRequest>
+                                <OnIdiom
+                                    x:TypeArguments="x:Double"
+                                    Phone="45.0"    
+                                    Tablet="40.0" />
+                            </Entry.HeightRequest>
+                        </Entry>
                         <Image Source="iconoUsuario" WidthRequest="20" />
                     </StackLayout>
-                    <StackLayout HorizontalOptions="Center" Orientation="Horizontal">
+                    <StackLayout HorizontalOptions="Center" Orientation="Horizontal" Margin="6">
                         <Entry
                             IsPassword="True"
                             Placeholder="Password"
                             Text="{Binding Password, Mode=TwoWay}"
-                            WidthRequest="200" />
+                            WidthRequest="200" >
+                            <Entry.WidthRequest>
+                                <OnIdiom
+                                    x:TypeArguments="x:Double"
+                                    Phone="80.0"
+                                    Tablet="300.0" />
+                            </Entry.WidthRequest>
+                                <Entry.HeightRequest>
+                                <OnIdiom
+                                    x:TypeArguments="x:Double"
+                                    Phone="45.0"    
+                                    Tablet="40.0" />
+                            </Entry.HeightRequest>
+                        </Entry>
                         <Image Source="iconoPassword" WidthRequest="20" />
                     </StackLayout>
                     <StackLayout
@@ -47,7 +75,7 @@
                             FontSize="15"
                             HorizontalOptions="Center"
                             Text="REGISTRESE AQUÍ"
-                            TextColor="#05cec8"
+                            TextColor="#82a20d"
                             VerticalOptions="CenterAndExpand">
                             <Label.GestureRecognizers>
                                 <TapGestureRecognizer Command="{Binding RegisCommand}" />
@@ -59,7 +87,7 @@
                         Orientation="Horizontal"
                         VerticalOptions="StartAndExpand">
                         <Button
-                            BackgroundColor="#61edb9"
+                            BackgroundColor="#82a20d"
                             BorderRadius="23"
                             Command="{Binding LoginCommand}"
                             HeightRequest="46"
@@ -71,7 +99,7 @@
                     </StackLayout>
                     <StackLayout HorizontalOptions="CenterAndExpand" Orientation="Horizontal">
                         <Label
-                            FontSize="16"
+                            FontSize="18"
                             HorizontalOptions="Center"
                             Text="Olvidé mi contraseña"
                             TextColor="#6E6E6E"
@@ -89,7 +117,7 @@
                     <Image Source="logos_sena" WidthRequest="200" />
                 </StackLayout>
                 <StackLayout Margin="0,-10,0,0">
-                    <Image Source="foot_icon" />
+                    <Image Source="fondos_arboles3_icon" />
                 </StackLayout>
 
             </StackLayout>
