--- a/huellaProto/huellaProto/Views/ListFlota.xaml
+++ b/huellaProto/huellaProto/Views/ListFlota.xaml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage
     x:Class="huellaProto.Views.ListFlota"
     xmlns="http://xamarin.com/schemas/2014/forms"
@@ -88,12 +88,13 @@
                 HasUnevenRows="true"
                 ItemsSource="{Binding Prueba}"
                 SeparatorVisibility="None"
-                VerticalOptions="Start">
+                VerticalOptions="Start" HorizontalOptions="CenterAndExpand">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
+                          <StackLayout HorizontalOptions="FillAndExpand">
                             <StackLayout
-                                Padding="15,10"
+                                Padding="30,10"
                                 HorizontalOptions="FillAndExpand"
                                 Orientation="Vertical">
 
@@ -118,16 +119,17 @@
                                         VerticalOptions="End" />
                                     <Entry
                                         Margin="-5,0,0,0"
-                                        HorizontalOptions="EndAndExpand"
+                                        HorizontalOptions="StartAndExpand"
                                         Keyboard="Numeric"
                                         WidthRequest="40" />
                                 </StackLayout>
                             </StackLayout>
+                          </StackLayout>   
                         </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-            <StackLayout Margin="0,10,0,0">
+            <StackLayout Margin="20">
                 <Button
                     BackgroundColor="#61edb9"
                     BorderRadius="23"
@@ -137,7 +139,7 @@
                     IsEnabled="{Binding Isnabled, Mode=TwoWay}"
                     Text="Calcular"
                     TextColor="White"
-                    VerticalOptions="End"
+                    VerticalOptions="Start"
                     WidthRequest="150" />
             </StackLayout>
         </StackLayout>
