--- a/huellaProto/huellaProto/Views/Login.xaml
+++ b/huellaProto/huellaProto/Views/Login.xaml
@@ -40,7 +40,7 @@
                                     Tablet="40.0" />
                             </Entry.HeightRequest>
                         </Entry>
-                        <Image Source="iconoUsuario" WidthRequest="20" />
+                        <Image Source="usuario" WidthRequest="20" />
                     </StackLayout>
                     <StackLayout HorizontalOptions="Center" Orientation="Horizontal" Margin="6">
                         <Entry
@@ -61,7 +61,7 @@
                                     Tablet="40.0" />
                             </Entry.HeightRequest>
                         </Entry>
-                        <Image Source="iconoPassword" WidthRequest="20" />
+                        <Image Source="pass" WidthRequest="20" />
                     </StackLayout>
                     <StackLayout
                         Margin="0,20,0,0"
