--- a/huellaProto/huellaProto/Views/Trasnporte.xaml
+++ b/huellaProto/huellaProto/Views/Trasnporte.xaml
@@ -3,13 +3,14 @@
     x:Class="huellaProto.Views.Trasnporte"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    Title="vehículos"
+    Title="VEHÍCULOS"
     BindingContext="{Binding Main, Source={StaticResource Locator}}">
     <ContentPage.Content>
 
         <ScrollView BindingContext="{Binding Tabs}">
 
             <StackLayout Padding="10" VerticalOptions="FillAndExpand">
+
                 
                 <StackLayout IsVisible="{Binding IsVisiblePreg, Mode=TwoWay}" VerticalOptions="EndAndExpand">
                      <Image
