--- a/huellaProto/huellaProto/Views/HuellaTabbed.xaml
+++ b/huellaProto/huellaProto/Views/HuellaTabbed.xaml
@@ -5,10 +5,11 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:tabs="clr-namespace:huellaProto.Views"
     Title="Encuesta"
+    BarTextColor= "White"
     BarBackgroundColor="#82a20d">
     <!--  Pages can be added as references or inline  -->
     <TabbedPage.Children>
-        <tabs:Trasnporte />
+        <tabs:Trasnporte/>
         <!--<tabs:Maquinas IsVisible="False" />
         <tabs:ResiduosPage />
         <tabs:Energia />-->
